# ui-automation-demo

./: pyproject.toml
helpers/: driver.py
pages/: __init__.py  base.py  home.py
steps/: steps.py
tests/: test.py
